broadcasting to all sockets _ currently

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -10,5 +10,9 @@ html(lang="en")
         header 
             h1 Noom 
         main 
+            ul
+            form
+                input(type="text", placeholder="Write a message", required)
+                button Send
             h2 Welcome to noom
         script(src="/public/js/app.js") 
